Se actualiza se agregan las habilidades al portafolio

--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#">Sobre mi</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Proyectos</a>
+                          <a class="nav-link" aria-current="page" href="#habilidades">Habilidades</a>
+                      </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#proyectos">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="#formulario">Contacto</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="assets/archivos/CV Daniel Campos.pdf" target="_blank">Descargar CV</a>
@@ -75,6 +78,48 @@
         <div class="tecnologias-items"><img src="assets/img/Android_Studio.png" alt=""></div>
         <div class="tecnologias-items"><img src="assets/img/ASP.png" alt=""></div>
         <div class="tecnologias-items"><img src="assets/img/Gitlogo.png" alt=""></div>
+      </div>
+      <div class="container" style="margin-top: 20px; background-color: #4ecca270;box-shadow: 0px 2px 7px 0px;">
+        <h2 id="habilidades">Habilidades</h2>
+        <div class="hab-body">
+          <h4>Trabajo en equipo</h4>
+          <li class="hab-li">
+            <div id="equipo">
+              .
+            </div>
+          </li>
+          <h4>Perseverancia</h4>
+          <li class="hab-li">
+            <div id="perseverancia">
+              .
+            </div>
+          </li>
+          <h4>Amor al aprendizaje</h4>
+          <li class="hab-li">
+            <div id="aprendizaje">
+              .
+            </div>
+          </li>
+          <h4>Orientación al detalle</h4>
+          <li class="hab-li">
+            <div id="orientacion">
+              .
+            </div>
+          </li>
+          <h3 id="metodologias">Metodologías</h3>
+          <h4>SCRUM</h4>
+          <li class="hab-li">
+            <div id="scrum">
+              .
+            </div>
+          </li>
+          <h4>MVC</h4>
+          <li class="hab-li">
+            <div id="mvc">
+              .
+            </div>
+          </li>
+        </div>
       </div>
       <div class="container" style="margin-top: 20px; background-color: #4ecca270;box-shadow: 0px 2px 7px 0px;">
         <h2 id="proyectos">Proyectos</h2>
