--- a/index.html
+++ b/index.html
@@ -13,15 +13,23 @@
     />
 
     <link rel="stylesheet" href="css/main.css" />
+    <script src="js/main.js" defer></script>
     <title>Portafolio</title>
   </head>
   <body>
+    <div class="carga">
+      <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="50" cy="50" r="40"></circle>
+      </svg>
+
+      <img class="imagenCarga" src="assets/img/DCdev.png" alt="">
+    </div>
     <div class="App">
       
       <div class="container-lg-fluid">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #393e46ee;">
             <div class="container-fluid">
-                <a class="navbar-brand">DC</a>
+                <img class="imgNav" src="assets/img/DCdev.png" alt=""> 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
