Se agregar los apartado de patrones de diseño al index

--- a/index.html
+++ b/index.html
@@ -123,9 +123,16 @@
               .
             </div>
           </li>
+          <h3 id="patrones">Patrones de Diseño</h3>
           <h4>MVC</h4>
           <li class="hab-li">
             <div id="mvc">
+              .
+            </div>
+          </li>
+          <h4>MVP</h4>
+          <li class="hab-li">
+            <div id="mvp">
               .
             </div>
           </li>
