--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/secundarios.css" />
     <script src="assets/js/main.js" defer></script>
     <script src="assets/js/email.js" defer></script>
     <script src="assets/js/fetchs.js" defer></script>
