modificacion de prueba

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/assets/css/main.css" />
-    <link rel="stylesheet" href="/assets/css/secundarios.css" />
     <script src="assets/js/main.js" defer></script>
     <script src="assets/js/email.js" defer></script>
     <script src="assets/js/fetchs.js" defer></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/secundarios.css" />
     <title>Portafolio</title>
   </head>
   <body>
@@ -93,7 +93,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="14000">
                 <video
-                  src="/assets/img/popVideo.mp4"
+                  src="assets/img/popVideo.mp4"
                   class="d-block w-100"
                   alt="..."
                   loop
@@ -102,7 +102,7 @@
               </div>
               <div class="carousel-item" data-bs-interval="14000">
                 <video
-                  src="/assets/img/codigojavaVideo.mp4"
+                  src="assets/img/codigojavaVideo.mp4"
                   class="d-block w-100"
                   alt="..."
                   loop
