modificacion de prueba

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                   class="d-block w-100"
                   alt="..."
                   autoplay
+                  preload="auto"
                   loop
                 ></video>
               </div>
@@ -106,6 +107,7 @@
                   class="d-block w-100"
                   alt="..."
                   loop
+                  preload="auto"
                   autoplay
                 ></video>
               </div>
