modificacion de prueba

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                   src="assets/img/popVideo.mp4"
                   class="d-block w-100"
                   alt="..."
-                  autoplay
+                  autoplay="true"
                   preload="auto"
-                  loop
+                  loop="true"
                 ></video>
               </div>
               <div class="carousel-item" data-bs-interval="14000">
@@ -106,9 +106,9 @@
                   src="assets/img/codigojavaVideo.mp4"
                   class="d-block w-100"
                   alt="..."
-                  loop
+                  loop="true"
                   preload="auto"
-                  autoplay
+                  autoplay="true"
                 ></video>
               </div>
             </div>
