muted y autoplay en los videos

--- a/index.html
+++ b/index.html
@@ -93,22 +93,23 @@
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="14000">
                 <video
-                  src="assets/img/popVideo.mp4"
+                  autoplay
+                  muted
+                  loop
                   class="d-block w-100"
+                  id="video1"
                   alt="..."
-                  autoplay="true"
-                  preload="auto"
-                  loop="true"
+                  src="assets/img/popVideo.mp4"
                 ></video>
               </div>
               <div class="carousel-item" data-bs-interval="14000">
                 <video
+                  autoplay
+                  loop
+                  muted
                   src="assets/img/codigojavaVideo.mp4"
-                  class="d-block w-100"
+                  class="d-block w-100 videos"
                   alt="..."
-                  loop="true"
-                  preload="auto"
-                  autoplay="true"
                 ></video>
               </div>
             </div>
