--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
     <script src="assets/js/fetchs.js" defer></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/secundarios.css" />
     <title>Portafolio</title>
   </head>
   <body>
     <div class="carga">
-      <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="50" cy="50" r="40"></circle>
-      </svg>
-
-      <img class="imagenCarga" src="assets/img/DCdev.png" alt="" />
+      <div class="moverLogoCarga">
+        <div class="humoLogoCarga">
+          <img class="imagenCarga" src="assets/img/DCdev.png" alt="" />
+        </div>
+      </div>
     </div>
     <div class="App">
       <div class="container-lg-fluid">
